# remotePPG

./: CMakeLists.txt  JnS.h  README.md  backgroundSubtraction.cpp  capture-v4l2.c  covariance-matlab.cpp  discrete_fourier_transform.cpp  face_op.cpp  face_op.hpp  fileIO.cpp  fileIO.hpp  helper.h  main.cpp  motionDetect1.cpp  objectDetection2.cpp  readXML.m  remotePPG.cpp  remotePPG.vcxproj  remotePPG.vcxproj.filters  run.sh  runit.bat  videoPlay.cpp  videoRGB.cpp
vs2010_2.4.x/: vs2010_2.4.x.sln
vs2010_2.4.x/rPPG-static/: rPPG-static.vcxproj  rPPG-static.vcxproj.filters
vs2010_2.4.x/videoRGB/: videoRGB-static.vcxproj  videoRGB-static.vcxproj.filters
vs2010_2.4.x/videoplay/: videoplay-static.vcxproj  videoplay-static.vcxproj.filters
vs_static/: vs_static.sln
vs_static/rPPG/: rPPG.vcxproj  rPPG.vcxproj.filters
